Configure Gradle at root project level (#43)